@@ -4,7 +4,7 @@ Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
 Requires: pupmod-simp-iptables < 7.0.0-0
 Requires: pupmod-simp-iptables >= 6.0.0-0
 Requires: pupmod-simp-logrotate < 7.0.0-0
-Requires: pupmod-simp-logrotate >= 6.0.0-0
+Requires: pupmod-simp-logrotate >= 6.1.0-0
 Requires: pupmod-simp-rsync >= 6.0.0-0
 Requires: pupmod-simp-rsync < 7.0.0-0
 Requires: pupmod-simp-rsyslog < 8.0.0-0
