@@ -26,7 +26,7 @@
     },
     {
       "name": "simp/logrotate",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "version_requirement": ">= 6.1.0 < 7.0.0"
     },
     {
       "name": "simp/rsyslog",
